--- a/public/new-user-side/css/main.css
+++ b/public/new-user-side/css/main.css
@@ -20496,7 +20496,7 @@ a.text-dark:hover, a.text-dark:focus {
     background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%); }
 
 .all-brands {
-  padding: 4rem 0 4rem; }
+  height: 50%; }
   @media (max-width: 768px) {
     .all-brands {
       display: none; } }
